--- a/cv/index.html
+++ b/cv/index.html
@@ -391,7 +391,7 @@
                     <h4 class="strike-through">
                         <span>Provigo</span>
                         <span class="date">
-undefined NaN — undefined NaN
+juin 2013 — août 2013
 </span>
                     </h4>
                     <div class="website pull-right">
@@ -451,7 +451,7 @@ undefined NaN — undefined NaN
                     <h4 class="strike-through">
                         <span>Cégep de Saint-Foy</span>
                         <span class="date">
-Janvier 2017 — undefined NaN
+Janvier 2017 — ...
 </span>
                     </h4>
                     <div class="area">
@@ -484,7 +484,7 @@ Janvier 2017 — undefined NaN
                     <h4 class="strike-through">
                         <span>Paracyclisme</span>
                         <span class="date">
-undefined NaN — undefined NaN
+juin 2009 — août 2011
 </span>
                     </h4>
                     <div class="website pull-right">
