correction du cv

--- a/cv/index.html
+++ b/cv/index.html
@@ -329,27 +329,21 @@
             <div class="row">
                 <div class="col-sm-6">
                     <strong>Email</strong>
-                    <div class="email"><a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="89c4e8fbfde0e7a7eae8ffe8e7e8eee1c9e5e0ffeca7eae8">[email&#160;protected]</a></div>
+                    <div class="email"><a href="mailto:Martin.Cavanagh@live.ca" class="__cf_email__">Martin.Cavanagh@live.ca</a></div>
                 </div>
                 <div class="col-sm-6">
                     <strong>Téléphone</strong>
                     <div class="phone">(581) 986-0837</div>
-                </div>
-                <div class="col-sm-6">
-                    <strong>Site</strong>
-                    <div class="website">
-                        <a href=""></a>
-                    </div>
                 </div>
             </div>
         </div>
     </section>
     <section id="about" class="row">
         <aside class="col-sm-3">
-            <h3>Résumer</h3>
+            <h3>Résumé</h3>
         </aside>
         <div class="col-sm-9">
-            <p>Travaillant j’aimerais joindre votre équipe de travail afin de développer mes compétences en multimédia.</p>
+            <p>Travaillant, méthodique et appliqué, j’aimerais me joindre à votre équipe de travail afin de développer mes compétences en multimédia et d'acquérir de réelles expériences en milieu de travail. De nature accommodante, je suis quelqu'un d'honnête et possède un raisonnement plutôt rationnel.</p>
         </div>
     </section>
     <section id="profiles" class="row">
@@ -381,56 +375,19 @@
             </div>
         </div>
     </section>
-    <section id="work" class="row">
-        <aside class="col-sm-3">
-            <h3>Expérience de travail</h3>
-        </aside>
-        <div class="col-sm-9">
-            <div class="row">
-                <div class="col-sm-12">
-                    <h4 class="strike-through">
-                        <span>Provigo</span>
-                        <span class="date">
-juin 2013 — août 2013
-</span>
-                    </h4>
-                    <div class="website pull-right">
-                        <a href=""></a>
-                    </div>
-                    <div class="position">
-                        Commis au fruits et légumes
-                    </div>
-                    <div class="summary">
-                        <p>Provigo est une entreprise d'épicerie qui sert au client divert produit. L'emploi que j'ai été attribué a été de m'occuper des fruits et des légumes pour assurer une bonne qualité. Ce provigo était à Baie-Comeau.</p>
-                    </div>
-                    <p>
-                        <strong>Tâches</strong>
-                    </p>
-                    <ul class="highlights">
-                        <li class="bullet">Prendre les commandes arrivé par camion pour l'entreposage</li>
-                        <li class="bullet">Assurer la qualité des aliments en les changeants de place ou de retirer ce qui n'est plus bon.</li>
-                        <li class="bullet">Servir au Client qui ont besoin d'aide por ne pas les laisser délaisser. </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </section>
     <section id="skills" class="row">
         <aside class="col-sm-3">
             <h3>Compétences</h3>
         </aside>
         <div class="col-sm-9">
             <div class="row">
-                <div class="col-sm-6">
-                    <div class="name">
-                        <h4>Capacité des études</h4>
-                    </div>
+                <div class="">
                     <ul class="keywords">
-                        <li>Utiliser les divers languages du webs - XML, HTML, CSS, JSON, JS.</li>
-                        <li>Utiliser les outils du développement web - suite d'Adobe, Sketch, PhpStorm, le Terminal.</li>
-                        <li>S'intéresser à la culture numérique et désign au travers des ages et du présent.</li>
+                        <li>Utiliser divers languages du Web et de programmation - XML, HTML, CSS, JSON, Javascript, SQL.</li>
+                        <li>Utiliser les outils du développement Web - suite d'Adobe (Photoshop, After Effect, Illustrator, Animate, Muse), Sketch, PhpStorm, le Terminal.</li>
+                        <li>Apprendre les principes fondamentaux du design Web - Contraste de couleur, accessibilité, ergonomie, utilisation de colonnes, etc.</li>
                         <li>Mettre en pratique les normes du W3C pour les structures de HTML5 et de CSS3.</li>
-                        <li>Intégrer ses projets dans les servers de la TimUnix.</li>
+                        <li>Intégrer ses projets dans les servers TimUnix du cégep.</li>
                     </ul>
                 </div>
                 <div class="col-sm-6">
@@ -449,26 +406,49 @@ juin 2013 — août 2013
             <div class="row">
                 <div class="col-sm-12">
                     <h4 class="strike-through">
-                        <span>Cégep de Saint-Foy</span>
+                        <span>Cégep de Sainte-Foy</span>
                         <span class="date">
-Janvier 2017 — ...
+Janvier 2017 — en cours
 </span>
                     </h4>
                     <div class="area">
-                        Technique d'intégration en Multimédia d'application et de web.
-                    </div>
-                    <div class="studyType">
-                        Technique
+                        Techniques d'intégration en Multimédia - application et web.
                     </div>
                     <h4>Cours</h4>
                     <ul class="courses">
-                        <li>Intégration - HTML et CSS</li>
-                        <li>Intégration 2 - XML</li>
-                        <li>Programmation - JavaScript et JSON</li>
+                        <li>Intégration - HTML5 et CSS3</li>
+                        <li>Intégration 2 - XML, accessibilité, approfondissement des savoirs avec HTML5 et CSS3</li>
+                        <li>Programmation - JavaScript, JSON et initiation à SQL</li>
                         <li>Culture numérique</li>
-                        <li>Design d'interface</li>
-                        <li>Traitement des médias</li>
-                        <li></li>
+                        <li>Design d'interface 1 et 2</li>
+                        <li>Traitement des médias et animation</li>
+
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="work" class="row">
+        <aside class="col-sm-3">
+            <h3>Expérience de travail</h3>
+        </aside>
+        <div class="col-sm-9">
+            <div class="row">
+                <div class="col-sm-12">
+                    <h4 class="strike-through">
+                        <span>Provigo</span>
+                        <span class="date"> juin 2013 - août 2013 </span>
+                    </h4>
+                    <div class="position">
+                        Commis au fruits et légumes
+                    </div>
+                    <p>
+                        <strong>Tâches</strong>
+                    </p>
+                    <ul class="highlights">
+                        <li class="bullet">Prendre les commandes arrivées par camion et les entreposer</li>
+                        <li class="bullet">Assurer la qualité des aliments dans les comptoirs.</li>
+                        <li class="bullet">Servir les clients qui ont besoin d'aide.</li>
                     </ul>
                 </div>
             </div>
@@ -483,9 +463,7 @@ Janvier 2017 — ...
                 <div class="col-sm-12">
                     <h4 class="strike-through">
                         <span>Paracyclisme</span>
-                        <span class="date">
-juin 2009 — août 2011
-</span>
+                        <span class="date"> Trois (3) périodes estivales </span>
                     </h4>
                     <div class="website pull-right">
                         <a href=""></a>
@@ -494,16 +472,16 @@ juin 2009 — août 2011
                         Assistant d'aide sur le terrain
                     </div>
                     <div class="summary">
-                        <p>Durant plusieurs années, à Baie-Comeau, il y eu une course de paracyclisme dans les rues. J'ai eu comme tâche divers services qui se résume à m'assurer que tout le monde vont bien.</p>
+                        <p>Durant plusieurs années, à Baie-Comeau, il y eu une course de paracyclisme dans les rues. J'ai eu diverses tâches à faire et ce fut une expérience enrichissante. </p>
                     </div>
                     <p>
-                        <strong>Highlights</strong>
+                        <strong>Tâche</strong>
                     </p>
                     <ul class="highlights">
                         <li class="bullet">Transport de matériaux pour aider à l'installation.</li>
-                        <li class="bullet">Aider les individus sur place pour assurer le bon fonctionnement.</li>
-                        <li class="bullet">Ramasser les détritues laisser par les passants.</li>
-                        <li class="bullet">Maintenir le circuit de la course.</li>
+                        <li class="bullet">Aider les individus sur place pour assurer le bon fonctionnement de l'évènement.</li>
+                        <li class="bullet">Ramasser les détritus abandonnés par les passants.</li>
+                        <li class="bullet">Maintenir le circuit de la course et assurer la surveillance des blocages de route.</li>
                     </ul>
                 </div>
             </div>
